# translation-model

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  spm_src.pkl
infra/: Pulumi.nmt-model.yaml  Pulumi.yaml  TraefikRoute.ts  index.ts  package-lock.json  package.json
my-modelaugbbqezdqix/model/: model_embeddings.py  nmt_model.py
my-modelaugbbqezdqix/serving/: serve.py
my-modelaugbbqezdqix/training/: train.py  utils.py  vocab.py
tests/: test_my_model.py
